src/Insets2dTrack.module.scss
$ease: cubic-bezier(0.25, 0.1, 0.25, 1);

$fast:   0.15s;
$normal: 0.2s;
$medium: 0.3s;
$slow:   0.6s;

.insets-track {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
}

.inset {
  z-index: 1;
  position: absolute;
  border: 0px solid white;
  background: white;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5),
              0 2px 6px 0 rgba(0, 0, 0, 0.33),
              0 2px 9px 0 rgba(0, 0, 0, 0.2);
  transform: translateZ(0);
  transition: transform $normal $ease,
              width $fast $ease,
              height $fast $ease,
              background $fast $ease,
              border $fast $ease,
              box-shadow $fast $ease;
}

.inset-track-non-smooth-transitions .inset {
  transition: border $fast $ease,
              background $fast $ease,
              box-shadow $fast $ease;
}

.inset-fast-transition,
.inset-track-non-smooth-transitions .inset-fast-transition {
  transition: transform $fast $ease,
              width $fast $ease,
              height $fast $ease,
              background $fast $ease,
              border $fast $ease,
              box-shadow $fast $ease;
}

.inset-is-top {
  transform-origin: center top;
}

.inset-is-bottom {
  transform-origin: center bottom;
}

.inset-is-left {
  transform-origin: left center;
}

.inset-is-right {
  transform-origin: right center;
}

.inset-focus,
.inset-dragging,
.inset-scaled-up {
  z-index: 3;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.6),
              0 2px 6px 0 rgba(0, 0, 0, 0.5),
              0 3px 22px 0 rgba(0, 0, 0, 1);
}

.inset-dragging {
  transition: border $fast $ease,
              background $fast $ease,
              box-shadow $fast $ease;
}

.inset-scaled-up {
  z-index: 4;
}

.inset-leader-line {
  z-index: 0;
  position: absolute;
  transition: transform $fast $ease;
  transform-origin: center left;
}

.inset-track-non-smooth-transitions .inset-leader-line {
  transition: none;
}

.inset-leader-line-focus,
.inset-leader-line-dragging {
  z-index: 2;
}

.inset-leader-line-dragging {
  transition: none;
}

.inset-leader-line-stub,
.inset-leader-line-stub-left,
.inset-leader-line-stub-right {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.inset-leader-line-stub-left,
.inset-leader-line-stub-right {
  transition: width $fast $ease,
              height $fast $ease;
}

.inset-leader-line-stub-left {
  left: 0;
}

.inset-leader-line-stub-right {
  right: 0;
}

.inset-load-indicator {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.inset-pulser {
  position: relative;
  width: 1rem;
  height: 1rem;
  max-width: 1rem;
  max-height: 1rem;
  border-radius: 1rem;
  background: rgba(0, 0, 0, 0.2);
  overflow: visible;

  &::before {
    content: '';
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: inherit;
    border-radius: inherit;
    transition: opacity .3s, transform .3s;
    animation: pulse-animation 2s $ease infinite;
    z-index: -1;
  }
}

@keyframes pulse-animation {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  33% {
    opacity: 0;
    transform: scale(1.75);
  }
  100% {
    opacity: 0;
    transform: scale(1.75);
  }
}

.indicator {
  position: absolute;
  z-index: -1;
  top: 50%;
  left: -6px;
  width: 12px;
  height: 12px;
  border-radius: 2px 0 0 2px;
  background: white;
  transform: translate(0, -6px);
  transform-origin: bottom left;
  transition: background $fast $ease, transform $fast $ease;
}

.inset-focus .indicator,
.inset-scaled-up .indicator {
  transform: translate(-6px, -6px);
}

.indicator-icon {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: opacity $fast $ease;
}

.inset-focus .indicator-icon,
.inset-scaled-up .indicator-icon {
  opacity: 1;
}

.inset-images-wrapper {
  position: absolute;
  display: flex;
  top: 2px;
  right: 2px;
  bottom: 2px;
  left: 2px;
  align-items: stretch;
}

.inset-images-wrapper.to-be-removed {
  z-index: 2;
  transition: opacity $slow $ease;
}

.inset-images-wrapper.to-be-removed.removing {
  opacity: 0;
}

.inset-images-wrapper-left {
  position: relative;
  display: flex;
  flex-grow: 1;

  > * {
    position: relative;
  }
}

.inset-images-wrapper-left-three {
  flex-grow: 2;
}

.inset-images-wrapper-left-four {
  flex-grow: 3;
}

.inset-images-wrapper-right {
  position: relative;
  display: flex;
  flex-direction: column;
}

.inset-images-wrapper-right-grow {
  flex-grow: 1;
}

.inset-image-wrapper,
.inset-cluster-size-wrapper {
  position: relative;
  flex-grow: 1;
}

.inset-cluster-size-wrapper-previews {
  position: absolute;
  z-index: 1;
  flex-grow: 0;
  top: 0;
  right: 0;
  width: 1.5rem;
  height: 1rem;
  border-radius: 2px;
  transition: opacity $fast $ease;
}

.inset-image-ratio {
  display: block;
  width: 100%;
  padding-top: 100%;
}

.inset-image {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: 2px;
  background-color: black;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  animation: fade-in $fast $ease;
  transform: translateZ(0);
}

.inset-cluster-size {
  position: absolute;
  top: 1px;
  right: 0;
  bottom: 0;
  left: 1px;
  display: flex;
  align-items: center;
  overflow: hidden;
  border-radius: 2px;
  background: rgba(0, 0, 0, 0.1);
}

.inset-cluster-size-wrapper-previews .inset-cluster-size {
  top: 0;
  left: 0;
}

.inset-cluster-size-text {
  width: 100%;
  font-size: 10px;
  font-weight: bold;
  text-align: center;
}

.inset-image-left-half-middle,
.inset-image-left-full-middle {
  right: 1px;
}

.inset-image-right-half-first,
.inset-image-right-half-middle,
.inset-image-right-half-last,
.inset-image-right-full-first,
.inset-image-right-full-middle,
.inset-image-right-full-last {
  left: 1px;
  right: 0;
}

.inset-image-right-full-middle {
  top: 1px;
  bottom: 1px;
}

.inset-image-right-full-first  {
  top: 0;
  bottom: 1px;
}

.inset-image-right-full-last  {
  top: 1px;
  bottom: 0;
}

.inset-previews-wrapper-top,
.inset-previews-wrapper-bottom {
  position: absolute;
  right: 2px;
  left: 2px;
  display: flex;
  flex-direction: column;
}

.inset-previews-wrapper-top {
  top: 2px;
}

.inset-previews-wrapper-bottom {
  bottom: 2px;
}

.inset-preview-wrapper {
  position: relative;
  margin-top: 1px;
  flex-grow: 1;
}

.inset-preview {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 1px;
  background-size: 100%;
}

@keyframes fade-in {
  from { opacity: 0; }
  to   { opacity: 1; }
}

